# slurpgit

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: lib.rs  main.rs
