[package]
name = "slurpgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
env_logger = "0.10.0"
http = "0.2.9"
log = "0.4.17"
octocrab = "0.21.0"
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio = {version="1.28.0", features=["full"]}
tower-http = { version = "0.4.0", features = ["cors"] }
url = "2.3.1"
